# communication

./: .gitignore  CMakeLists.txt  ConnectionlessPeer.hpp  Encoder.cpp  Encoder.hpp  LICENSE  Message.hpp  README.md  TcpClient.hpp  TcpServer.cpp  TcpServer.hpp  encoder.drawio  makefile  setup.sh  test_vector_generator.py  test_vectors.cpp  test_vectors.hpp  ut.cpp  ut_peer0.cpp  ut_peer1.cpp
build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake  ut-encoder  ut-tcp-client  ut-tcp-server  ut-udp-peer
docs/: design.drawio  encoder.drawio
include/: Encoder.hpp  EndPoint.hpp  EndPoint.inl  Endpoint.hpp  Enpoint.hpp  Message-bk.hpp  Message.hpp  P2P_EndPoint.hpp  P2P_Endpoint.hpp  Packet.hpp  SyncQueue.hpp  TcpClient.hpp  TcpClient.inl  TcpServer.hpp  TcpServer.inl  UdpPeer.hpp  UdpPeer.inl  byteorder.hpp  common.hpp
include/inline/: Encoder.inl  EndPoint.inl  P2P_EndPoint.inl  P2P_Endpoint.inl  Packet.inl  SyncQueue.inl  TcpClient.inl  TcpServer.inl  UdpPeer.inl
src/: Encoder.cpp  EndPoint.cpp  Message.cpp  Message.hpp  Observer.hpp  P2P_EndPoint.cpp  P2P_Endpoint.cpp  TcpClient.cpp  TcpServer.cpp  UdpPeer.cpp  UdpPeer.hpp  common.hpp  test_vectors.hpp  ut_tcp_client.cpp  ut_tcp_server.cpp
test/: MessageImpl.cpp  MessageImpl.hpp  ObserverImpl.hpp  comm_wrapper.py  commw.py  config.ini  encoder_ut.cpp  test_vectors.cpp  test_vectors.hpp  test_vectors.py  udp_peer_ut.cpp  ut_encoder.cpp  ut_peer.cpp  ut_tcp_client.cpp  ut_tcp_client.py  ut_tcp_server.cpp  ut_tcp_server.py  ut_tcpip_ep.py  ut_udp_peer.cpp  ut_udp_peer.py  util.hpp
test/i3/: CMakeLists.txt  client.cpp  server.cpp
tools/: decoding_test_vectors.py  test_vectors.cpp  test_vectors.py  test_vectors_generator.py
wrapper/: CMakeLists.txt  README.md  comm_wrapper.cpp  comm_wrapper.hpp  comm_wrapper.py
